testdata/bad/bad-fail-7.ct
# Command using InProcessProgram

$ inprocess99 --> FAIL 5
